# etudes-for-python

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
archive/: README.md
archive/hints/: 001-change-due.md  002-trimmed-greeting.md  003-count-vowels.md  006-even-or-odd.md  007-hello-world-2nd-stage.md  008-even-numbers.md  009-min-max.md  011-comma-separated-scores.md  014-extended-fizzbuzz.md  015-alternative-fuzzbuzz.md  017-word-count.md  018-rotate-left.md  020-score-podium.md  021-stable-score-sort.md  022-statistics-score-report.md  023-operator-sort-key.md  024-counter-top-words.md  027-first-unique-character.md  028-balanced-parentheses.md  029-independent-board.md  030-bisect-score-board.md  032-stock-operations.md  034-heapq-priority-tasks.md  036-url-query-builder.md  037-regex-named-date.md  039-unicode-canonical-key.md  040-password-validator.md  042-rotate-printable-ascii.md  044-hashlib-file-digest.md  045-uuid-record-id.md  047-password-generator.md  049-email-header-parser.md  050-base64-family.md  052-unittest-table-cases.md  054-logging-night-shift.md  057-decimal-invoice-total.md  058-tomllib-project-metadata.md  061-business-days.md  062-zoneinfo-meeting-time.md  064-tempfile-shutil-workdir.md  (+18 more)
archive/problems/: 001-change-due.md  002-trimmed-greeting.md  003-count-vowels.md  005-multiplication-row.md  007-hello-world-2nd-stage.md  008-even-numbers.md  009-min-max.md  010-int-or-none.md  011-comma-separated-scores.md  (+44 more)
docs/: .pages  authoring.md  index.md
templates/: hint.md  problem.md  solution.md
(+815 files in other folders)
