[project]
name = "etudes-for-python"
version = "0.1.0"
description = "An exercise book site built with MkDocs Material."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.7.6",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
